# static-program-analyzer

./: .clang-format  .gitignore  README.md  package-lock.json  package.json  style.sh  styleall.sh
Team06/Code06/src/spa/: CMakeLists.txt
Team06/Code06/src/spa/src/PKB/: FindDEStrategyFactory.h  PKB.cpp  PKB.h  ReadPKB.cpp  ReadPKB.h  WritePKB.cpp  WritePKB.h  WritePKBAPI.cpp  WritePKBAPI.h
Team06/Code06/src/spa/src/PKB/api/: Follows.cpp  Follows.h  FollowsAPI.cpp  FollowsAPI.h  FollowsT.cpp  FollowsT.h  Parent.cpp  Parent.h  Statement.cpp  Statement.h
Team06/Code06/src/spa/src/PKB/cache/: AttributeCache.h  Cache.cpp  Cache.h  ComparisonCache.h  ParameterCache.h  PatternCache.h  RelationshipCache.h
Team06/Code06/src/spa/src/PKB/queryHandlers/: AssignPatternHandler.cpp  AssignPatternHandler.h  EntEntRLHandler.cpp  EntEntRLHandler.h  FollowsParentHandler.h  ModifiesUsesHandler.cpp  ModifiesUsesHandler.h  RLQueryHandler.h  StmtEntRLHandler.cpp  StmtEntRLHandler.h  StmtStmtRLHandler.cpp  StmtStmtRLHandler.h  StmtStmtRLQueryHandler.cpp  StmtStmtRLQueryHandler.h
Team06/Code06/src/spa/src/PKB/readHandlers/: AffectsHandler.cpp  AffectsHandler.h  AssignPatternHandler.cpp  AssignPatternHandler.h  CallsHandler.cpp  CallsHandler.h  FollowsParentHandler.cpp  FollowsParentHandler.h  IfWhilePatternHandler.cpp  ModifiesUsesHandler.h  (+10 more)
Team06/Code06/src/spa/src/QPS/: QPS.cpp  QPS.h  QPSGrammarUtils.cpp  QPSGrammarUtils.h  VariableStore.cpp  VariableStore.h
Team06/Code06/src/spa/src/SP/: CFGBuilder.cpp  CFGBuilder.h  CMakeLists.txt  DesignExtractor.cpp  DesignExtractor.h  Parser.cpp  Parser.h  SP.cpp  SP.h  SPExceptions.h  SemanticValidator.cpp  SemanticValidator.h  Token.cpp  Token.h  TokenType.h  Tokenizer.cpp  Tokenizer.h
Team06/Code06/src/spa/src/exceptions/: Exception.cpp  Exception.h  InternalException.cpp  InternalException.h  SemanticException.cpp  SemanticException.h  SyntaxException.cpp  SyntaxException.h
Team06/Code06/src/spa/src/qps/: DeclarationParser.cpp  DeclarationParser.h  QPS.cpp  QPS.h  QPSGrammarUtils.cpp  QPSGrammarUtils.h  QueryParser.cpp  VariableStore.cpp  VariableStore.h
Team06/Code06/src/spa/src/utils/: AppConstants.h
(+492 files in other folders)
